--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tangjizhong">View on GitHub</a>
+          <a id="forkme_banner" href="http://i.tangjizhong.tk">View on Blog</a>
 
-          <h1 id="project_title">Tangjizhong.github.com</h1>
+          <h1 id="project_title">Tangjizhong.tk</h1>
           <h2 id="project_tagline">This is tangjizhong personal blog.</h2>
 
         </header>
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Tang Jizhong's personal blog home page.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -64,7 +64,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://tangjizhong.tk">Tang Jizhong Pages</a></p>
       </footer>
     </div>
 
