--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="http://i.tangjizhong.tk" target="_blank">View on Blog</a>
 
           <h1 id="project_title">Tangjizhong.tk</h1>
-          <h2 id="project_tagline">This is tangjizhong personal blog.</h2>
+          <h2 id="project_tagline">Tang Jizhong's personal blog.</h2>
 
         </header>
     </div>
