--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="#">Tang Jizhong Pages</a></p>
+        <p>Published with <a href="#">Tang Jizhong</a></p>
       </footer>
     </div>
 
