--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="http://i.tangjizhong.tk" target="_blank">View on Blog</a>
+          <a id="forkme_banner" href="http://tangjizhong.tk/i" target="_blank">View on Blog</a>
 
           <h1 id="project_title">Tangjizhong.tk</h1>
           <h2 id="project_tagline">Tang Jizhong's personal blog.</h2>
