post index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="http://tangjizhong.tk/i" target="_blank">View on Blog</a>
 
           <h1 id="project_title">Tangjizhong.tk</h1>
-          <h2 id="project_tagline">Tang Jizhong's personal blog.</h2>
+          <h2 id="project_tagline">Tang Jizhong's personal blog.<a version="1.0" class="qzOpenerDiv" href="http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_likeurl" target="_blank">赞</a><script  src="http://qzonestyle.gtimg.cn/qzone/app/qzlike/qzopensl.js#jsdate=20111107&style=2&showcount=1&width=130&height=30" charset="utf-8" defer="defer" ></script></h2>
 
         </header>
     </div>
@@ -31,6 +31,7 @@
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to Tang Jizhong's personal blog home page.</h3>
 <p>透心凉，心飞扬~我是程序员，我爱吃冰西瓜。</p>
 <p><img src="images/xigua001.png" width="210" height="170"></p>
+<p><a href="http://user.qzone.qq.com/36634584" target="_blank"><img src="http://r.qzone.qq.com/cgi-bin/cgi_get_user_pic?openid=000000000000000000000000038160D8&pic=8.jpg&key=cec75d4e41dc07a949c2e3731c5696d2"></a></p>
 <p><img src="images/xigua002.png" width="210" height="170"></p>
 <!--
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -67,11 +68,40 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="#">Tang Jizhong</a></p>
+        <p>Published with <a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=ed4b4529928fff8982adfbd1cbb5c338dba180832d90f85c">Tang Jizhong</a></p>
       </footer>
     </div>
 
     
-
+<script type="text/javascript">
+  window._qzone_share_pick_cfg = {
+    url:location.href,
+    summary:'',/*分享摘要(可选)*/
+    title:'',/*分享标题(可选)*/
+    site:'',/*分享来源 如：腾讯网(可选)*/
+    pics:'', /*分享图片的路径(可选)*/
+    drag_pick:{
+        '@style':102,
+        body:{}
+      }
+  };
+</script>
+<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone/app/qzshare/script/qzshare.plus.pick.js" async="true" charset="utf-8"></script>
+<!--
+<script type="text/javascript">
+window._qzone_share_pick_cfg = {
+'url' : location.href,
+'desc' : '',/*默认分享理由(可选)*/
+'summary' : '',/*分享摘要(可选)*/
+'title' : '',/*分享标题(可选)*/
+'site' : '',/*分享来源 如：腾讯网(可选)*/
+'img_pick' : {
+'@style' : 101,
+'body' : {}
+}
+};
+</script>
+<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone/app/qzshare/script/qzshare.plus.pick.js" async="true" charset="utf-8"></script>
+-->
   </body>
 </html>
