post index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Tang Jizhong's personal blog</title>
+
+    <style type="text/css">
+      .tj{
+        margin-left:5px;
+        font-size:12px;
+      }
+      .tj a{
+        color: #FFF;
+      }
+    </style>
   </head>
 
   <body>
@@ -68,7 +78,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=ed4b4529928fff8982adfbd1cbb5c338dba180832d90f85c">Tang Jizhong</a></p>
+        <p>Published with <a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=ed4b4529928fff8982adfbd1cbb5c338dba180832d90f85c">Tang Jizhong</a><span class="tj"><script src="http://s19.cnzz.com/stat.php?id=2919660&web_id=2919660" language="JavaScript"></script></span></p>
       </footer>
     </div>
 
